--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,17 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "barryvdh/laravel-debugbar": "^3.1",
         "fideloper/proxy": "~3.3",
+        "hieu-le/active": "~3.5",
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "maximebf/debugbar": ">=1.0.0",
         "mews/captcha": "~2.0",
         "overtrue/laravel-lang": "~3.0"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "~3.1",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
