--- a/package.json
+++ b/package.json
@@ -10,15 +10,28 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
+    "ajv": "^6.0.0",
     "axios": "^0.17",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^8.0.0",
     "bootstrap-sass": "^3.3.7",
+    "browserify": "^16.1.1",
     "cross-env": "^5.1.4",
     "gulp": "^3.8.8",
     "gulp-livereload": "^3.8.1",
     "jquery": "^3.2",
+    "laravel-elixir": "^3.0",
+    "laravel-elixir-livereload": "^1.1.6",
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
+    "node-sass": "^4.0.0",
     "vue": "^2.5.7",
-    "webpack-livereload-plugin": "^2.1.1"
+    "watchify": "^3.11.0"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.26.0"
   }
 }
