--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "~1.0",
         "maximebf/debugbar": ">=1.0.0",
         "mews/captcha": "~2.0",
+        "mews/purifier": "~2.0",
         "overtrue/laravel-lang": "~3.0"
     },
     "require-dev": {
