--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "ext-pcntl": "^7.1",
         "barryvdh/laravel-debugbar": "^3.1",
         "dominykasgel/google-safe-browsing": "^1.0",
         "fideloper/proxy": "~3.3",
@@ -13,11 +14,13 @@
         "hieu-le/active": "~3.5",
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
+        "laravel/horizon": "~1.0",
         "laravel/tinker": "~1.0",
         "maximebf/debugbar": ">=1.0.0",
         "mews/captcha": "~2.0",
         "mews/purifier": "~2.0",
-        "overtrue/laravel-lang": "~3.0"
+        "overtrue/laravel-lang": "~3.0",
+        "predis/predis": "~1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
